<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/autobus4">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_id"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#F57540CA"/>

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_ticket"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return_menu_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#F57540CA"/>
</LinearLayout>
