<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/autobus6">

    <Button
        android:id="@+id/buttonSell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="342dp"
        android:text="@string/button_sell_text" />

    <Button
        android:id="@+id/buttonConsult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_consult_text"
        android:layout_below="@id/buttonSell"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update_text"
        android:layout_below="@id/buttonConsult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_text"
        android:layout_below="@id/buttonUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
</RelativeLayout>
