<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/autobus5"
    tools:context=".Registro">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/username_hint"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:textColor="@color/white"
        android:backgroundTint="#F40606"
        android:textStyle="bold"
        />

</LinearLayout>
