<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/autobus1">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/password"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:backgroundTint="#FAE207"
        android:text="@string/login_button_text"
        android:textStyle="bold"/>
</LinearLayout>

